Exception handling globally 1